--- a/_posts/2013-07-22-Soap-Dog.md
+++ b/_posts/2013-07-22-Soap-Dog.md
@@ -4,4 +4,4 @@ layout: post
 title: Soap Dog
 ---
 
-My [dog](http://www.flickr.com/photos/dr3wh0/8729214861/lightbox/) eats [soap](http://www.calbenpuresoap.com/images/fs_beauty_bar.jpg).
+My [dog](http://dr3wh0.tumblr.com/post/56450926370) eats [soap](http://www.calbenpuresoap.com/images/fs_beauty_bar.jpg).
