--- a/_posts/2013-07-22-Soap-Dog.md
+++ b/_posts/2013-07-22-Soap-Dog.md
@@ -1,9 +1,9 @@
 ---
 category: DR3WH0
-published: true
 layout: post
+published: true
 title: Soap Dog
-tags: cocoa
+tags: animals dogs cocoa
 ---
 
 My [dog](http://dr3wh0.tumblr.com/post/56450926370) eats [soap](http://www.calbenpuresoap.com/images/fs_beauty_bar.jpg).
