--- a/_posts/2013-08-07-brown-dog.md
+++ b/_posts/2013-08-07-brown-dog.md
@@ -3,10 +3,10 @@ category: DR3WH0
 layout: post
 published: true
 title: Brown Dog
-tags: haiku dogs
+tags: haiku animals dogs
 description: DR3WH0.haiku
 ---
 
-	head high, big brown dog
+head high, big brown dog
 	barks twice, anticipating
 	fresh food through this door
