--- a/_posts/2013-07-22-Soap-Dog.md
+++ b/_posts/2013-07-22-Soap-Dog.md
@@ -6,4 +6,4 @@ category: poetry
 tags: animals dogs cocoa
 ---
 
-My [dog](http://dr3wh0.tumblr.com/post/56450926370) eats [soap](http://www.calbenpuresoap.com/images/fs_beauty_bar.jpg).
+My [dog](http://dr3wh0.tumblr.com/post/56450926370) eats ![bar soap image](http://www.calbenpuresoap.com/images/fs_beauty_bar.jpg)
