--- a/_posts/2013-07-22-Soap-Dog.md
+++ b/_posts/2013-07-22-Soap-Dog.md
@@ -6,4 +6,10 @@ category: poetry
 tags: animals dogs cocoa
 ---
 
-My [dog](http://dr3wh0.tumblr.com/post/56450926370) eats ![bar soap image](http://www.calbenpuresoap.com/images/fs_beauty_bar.jpg)
+**MY**
+
+![dog](http://24.media.tumblr.com/69a65bbcc619d2a00b4068e910d80d72/tumblr_mqie09HvRU1rive1ro1_500.jpg)
+
+**EATS**
+
+![bar soap image](http://www.calbenpuresoap.com/images/fs_beauty_bar.jpg)
