--- a/_posts/2013-07-22-Soap-Dog.md
+++ b/_posts/2013-07-22-Soap-Dog.md
@@ -3,10 +3,8 @@ layout: post
 published: true
 title: Soap Dog
 category: poetry
-tags: animals dogs cocoa
+tags: animals dogs cocoa photos
 ---
-
-**MY**
 
 ![dog](http://24.media.tumblr.com/69a65bbcc619d2a00b4068e910d80d72/tumblr_mqie09HvRU1rive1ro1_500.jpg)
 
