--- a/_posts/2013-08-07-brown-dog.md
+++ b/_posts/2013-08-07-brown-dog.md
@@ -3,7 +3,7 @@ layout: post
 published: true
 title: Brown Dog
 category: poetry
-tags: haiku dogs
+tags: haiku cocoa
 description: DR3WH0.haiku
 ---
 
