--- a/_posts/2013-10-25-tageslicht-15-48.md
+++ b/_posts/2013-10-25-tageslicht-15-48.md
@@ -3,7 +3,7 @@ layout: post
 published: true
 title: "Tageslicht 15:48"
 category: photo
-tags: cocoa dogs
+tags: cocoa
 ---
 
 ![Cocoa](http://31.media.tumblr.com/bcfed3cda4055ff17b12138f91b50604/tumblr_mv8shfFgjB1rive1ro1_500.jpg)
