--- a/_posts/2013-10-22-tageslicht-16-41.md
+++ b/_posts/2013-10-22-tageslicht-16-41.md
@@ -3,7 +3,7 @@ layout: post
 published: true
 title: "Tageslicht 16:41"
 category: photo
-tags: cocoa dogs
+tags: cocoa
 ---
 
 ![Cocoa](http://25.media.tumblr.com/c504914230094dfc01d348161053e98f/tumblr_mv3ay7BmtZ1rive1ro1_500.jpg)
