--- a/_posts/2014-05-25-tageslicht-11-26.md
+++ b/_posts/2014-05-25-tageslicht-11-26.md
@@ -6,4 +6,4 @@ category: photo
 tags: trees power_lines war
 ---
 
-[![Backyard Trees, Power Lines, and Humvees](http://37.media.tumblr.com/323dff90829fddaff86c8e6ebad30bea/tumblr_n651mvfx6z1rive1ro1_500.jpg)](http://dr3wh0.tumblr.com/post/86803387364 "View on DR3WH0.NET")
+[![Backyard Trees, Power Lines, and Humvees](http://37.media.tumblr.com/323dff90829fddaff86c8e6ebad30bea/tumblr_n651mvfx6z1rive1ro1_500.jpg)](http://dr3wh0.tumblr.com/post/86803387364 "View on Tumblr")
