--- a/_posts/2014-06-14-tageslicht-16-12.md
+++ b/_posts/2014-06-14-tageslicht-16-12.md
@@ -2,7 +2,8 @@
 layout: post
 published: true
 title: "Tageslicht 16:12"
-category: dr3wh0
+category: photo
+tags: trees
 ---
 
 [![Backyard Trees](http://31.media.tumblr.com/8c7d1aabd317cfbd6f6b1e61cf4b9a93/tumblr_n76g94intx1rive1ro1_500.jpg)](http://dr3wh0.tumblr.com/post/88793013979/tageslicht-16-12 "View on Tumblr")
