fix December 2016 - February 2017 posts

--- a/_posts/2016-12-12-tageslicht-08-09.md
+++ b/_posts/2016-12-12-tageslicht-08-09.md
@@ -5,5 +5,5 @@ category: photo
 title: 'Tageslicht 08:09'
 tags: trees baeume
 ---
-<blockquote class=""twitter-tweet""><p lang=""und"" dir=""ltr""><a href=""https://twitter.com/hashtag/trees?src=hash"">#trees</a> <a href=""https://t.co/HcVCv5gv4E"">pic.twitter.com/HcVCv5gv4E</a></p>&mdash; DR3WH0 (@DR3WH0) <a href=""https://twitter.com/DR3WH0/status/808312843690983424"">December 12, 2016</a></blockquote>
-<script async src=""//platform.twitter.com/widgets.js"" charset=""utf-8""></script>
+<blockquote class="twitter-tweet"><p lang="und" dir="ltr"><a href="https://twitter.com/hashtag/trees?src=hash">#trees</a> <a href="https://t.co/HcVCv5gv4E">pic.twitter.com/HcVCv5gv4E</a></p>&mdash; DR3WH0 (@DR3WH0) <a href="https://twitter.com/DR3WH0/status/808312843690983424">December 12, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
