--- a/_posts/2017-01-26-tageslicht-12-46.md
+++ b/_posts/2017-01-26-tageslicht-12-46.md
@@ -5,5 +5,5 @@ category: photo
 title: 'Tageslicht 12:46'
 tags: trees baeume
 ---
-<blockquote class=""twitter-tweet""><p lang=""und"" dir=""ltr""><a href=""https://twitter.com/hashtag/trees?src=hash"">#trees</a> <a href=""https://t.co/vBr9NlM4B1"">pic.twitter.com/vBr9NlM4B1</a></p>&mdash; DR3WH0 (@DR3WH0) <a href=""https://twitter.com/DR3WH0/status/824689933994590208"">January 26, 2017</a></blockquote>
-<script async src=""//platform.twitter.com/widgets.js"" charset=""utf-8""></script>
+<blockquote class="twitter-tweet"><p lang="und" dir="ltr"><a href="https://twitter.com/hashtag/trees?src=hash">#trees</a> <a href="https://t.co/vBr9NlM4B1">pic.twitter.com/vBr9NlM4B1</a></p>&mdash; DR3WH0 (@DR3WH0) <a href="https://twitter.com/DR3WH0/status/824689933994590208">January 26, 2017</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
