--- a/_posts/2017-01-27-tageslicht-15-49.md
+++ b/_posts/2017-01-27-tageslicht-15-49.md
@@ -5,5 +5,5 @@ category: photo
 title: 'Tageslicht 15:49'
 tags: trees baeume
 ---
-<blockquote class=""twitter-tweet""><p lang=""und"" dir=""ltr""><a href=""https://twitter.com/hashtag/trees?src=hash"">#trees</a> <a href=""https://t.co/NWP3FWpjPj"">pic.twitter.com/NWP3FWpjPj</a></p>&mdash; DR3WH0 (@DR3WH0) <a href=""https://twitter.com/DR3WH0/status/825098454212960261"">January 27, 2017</a></blockquote>
-<script async src=""//platform.twitter.com/widgets.js"" charset=""utf-8""></script>
+<blockquote class="twitter-tweet"><p lang="und" dir="ltr"><a href="https://twitter.com/hashtag/trees?src=hash">#trees</a> <a href="https://t.co/NWP3FWpjPj">pic.twitter.com/NWP3FWpjPj</a></p>&mdash; DR3WH0 (@DR3WH0) <a href="https://twitter.com/DR3WH0/status/825098454212960261">January 27, 2017</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
