--- a/_posts/2017-02-08-tageslicht-07-51.md
+++ b/_posts/2017-02-08-tageslicht-07-51.md
@@ -5,5 +5,5 @@ category: photo
 title: 'Tageslicht 07:51'
 tags: trees baeume
 ---
-<blockquote class=""twitter-tweet""><p lang=""und"" dir=""ltr""><a href=""https://twitter.com/hashtag/trees?src=hash"">#trees</a> <a href=""https://t.co/pXQzdv5ME3"">pic.twitter.com/pXQzdv5ME3</a></p>&mdash; DR3WH0 (@DR3WH0) <a href=""https://twitter.com/DR3WH0/status/829326843580907520"">February 8, 2017</a></blockquote>
-<script async src=""//platform.twitter.com/widgets.js"" charset=""utf-8""></script>
+<blockquote class="twitter-tweet"><p lang="und" dir="ltr"><a href="https://twitter.com/hashtag/trees?src=hash">#trees</a> <a href="https://t.co/pXQzdv5ME3">pic.twitter.com/pXQzdv5ME3</a></p>&mdash; DR3WH0 (@DR3WH0) <a href="https://twitter.com/DR3WH0/status/829326843580907520">February 8, 2017</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
